refactor(docker): remove basic image. use eclipse-temurin:17-jdk-noble